Initialize averaging buffer with initial speed value

BUG:234308